--- a/Scrimba_counter/index.html
+++ b/Scrimba_counter/index.html
@@ -3,10 +3,21 @@
     <head>
         <meta charset = "UTF-8">
         <meta name="viewport" content="width=device-width, initial scale=1.0">
-        <title>Document</title>
+        <link rel="stylesheet" href="styles.css">
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.css">
+        <title>First Counter Project</title>
     </head>
     <body>
-        <h1>Hello World</h1>
-        <h2>Test test</h2> 
+        <div id="spacer"></div>
+        <div id="counter">
+        <h1>Number of Jumps in Hondo's Dinner Dance</h1>
+        <h2 id="count-el">0</h2> 
+        <button id="increment-btn" onclick="increment()">ADD TO COUNT</button>
+        <button id="save-btn" onclick="save()">SAVE</button>
+        <p id="save-el">Previous counts: </p>
+        <script src="main.js"></script>
+        </div>
     </body>
 </html>
+
+
