--- a/Unit_Converter/index.html
+++ b/Unit_Converter/index.html
@@ -8,9 +8,9 @@
     <body>
         <main>
             <div class="top">
-                <h1>Metric/Imperial Unit Conversion</h1>
-                <input >
-                <button>Convert</button>
+                <h1>Metric / Imperial <br> Unit Conversion</h1>
+                <input type="text" id="input" class="num" >
+                <button id="convert-btn">Convert</button>
             </div>
             <div class="bottom">
                 <div class="output">
@@ -18,12 +18,12 @@
                     <p class="conversion" id="conv-length"></p>
                 </div>
                 <div class="output">
-                    <h2 class="desc">Volumne (Liters/Gallons)</h2>
+                    <h2 class="desc">Volume (Liters/Gallons)</h2>
                     <p class="conversion" id="conv-volume"></p>
                 </div>
                 <div class="output">
                     <h2 class="desc">Mass (Kilograms/Pounds)</h2>
-                    <p class="conversion" id="conv-length"></p>
+                    <p class="conversion" id="conv-weight"></p>
                 </div>
             </div>
         </main>
